[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
 
[project]
name = "param_ens_gen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
"xarray",
"numpy",
"scipy",
"pandas",
"pyyaml",
"tqdm",
"netcdf4",
]
 
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "pytest-mock", "black", "pylint"]

[project.scripts]
param_ens_gen = "param_ens_gen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["param_ens_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pylint.main]
source-roots = ["."]

[tool.pylint."tests/conftest.py"]
disable = ["redefined-outer-name"]

[tool.pylint."tests/*.py"]
disable = ["too-many-arguments", "too-many-positional-arguments", "duplicate-code"]

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 88

